--- a/BE/package.json
+++ b/BE/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
     "express-validator": "^6.14.2",
+    "mongoose": "^6.7.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
